src/test/ui/libstd-case-typo/net.stderr
error[E0412]: cannot find type `incoming` in this scope
  --> $DIR/net.rs:4:17
   |
LL | fn test_inc(_x: incoming){}
   |                 ^^^^^^^^ not found in this scope
   |
help: did you mean `std::net::Incoming`?
   |
LL | fn test_inc(_x: std::net::Incoming){}
   |                 ^^^^^^^^^^^^^^^^^^

error[E0412]: cannot find type `IPv4Addr` in this scope
  --> $DIR/net.rs:6:18
   |
LL | fn test_ipv4(_x: IPv4Addr){}
   |                  ^^^^^^^^ not found in this scope
   |
help: did you mean `std::net::Ipv4Addr`?
   |
LL | fn test_ipv4(_x: std::net::Ipv4Addr){}
   |                  ^^^^^^^^^^^^^^^^^^

error[E0412]: cannot find type `IPv6Addr` in this scope
  --> $DIR/net.rs:8:18
   |
LL | fn test_ipv6(_x: IPv6Addr){}
   |                  ^^^^^^^^ not found in this scope
   |
help: did you mean `std::net::Ipv6Addr`?
   |
LL | fn test_ipv6(_x: std::net::Ipv6Addr){}
   |                  ^^^^^^^^^^^^^^^^^^

error[E0412]: cannot find type `SocketAddrv4` in this scope
  --> $DIR/net.rs:10:19
   |
LL | fn test_socv4(_x: SocketAddrv4){}
   |                   ^^^^^^^^^^^^ not found in this scope
   |
help: did you mean `std::net::SocketAddrV4`?
   |
LL | fn test_socv4(_x: std::net::SocketAddrV4){}
   |                   ^^^^^^^^^^^^^^^^^^^^^^

error[E0412]: cannot find type `SocketAddrv6` in this scope
  --> $DIR/net.rs:12:19
   |
LL | fn test_socv6(_x: SocketAddrv6){}
   |                   ^^^^^^^^^^^^ not found in this scope
   |
help: did you mean `std::net::SocketAddrV6`?
   |
LL | fn test_socv6(_x: std::net::SocketAddrV6){}
   |                   ^^^^^^^^^^^^^^^^^^^^^^

error[E0412]: cannot find type `TCPListener` in this scope
  --> $DIR/net.rs:14:21
   |
LL | fn test_tcplist(_x: TCPListener){}
   |                     ^^^^^^^^^^^ not found in this scope
   |
help: did you mean `std::net::TcpListener`?
   |
LL | fn test_tcplist(_x: std::net::TcpListener){}
   |                     ^^^^^^^^^^^^^^^^^^^^^

error[E0412]: cannot find type `TCPStream` in this scope
  --> $DIR/net.rs:16:20
   |
LL | fn test_tcpstr(_x: TCPStream){}
   |                    ^^^^^^^^^ not found in this scope
   |
help: did you mean `std::net::TcpStream`?
   |
LL | fn test_tcpstr(_x: std::net::TcpStream){}
   |                    ^^^^^^^^^^^^^^^^^^^

error[E0412]: cannot find type `UDPSocket` in this scope
  --> $DIR/net.rs:18:20
   |
LL | fn test_udpsoc(_x: UDPSocket){}
   |                    ^^^^^^^^^ not found in this scope
   |
help: did you mean `std::net::UdpSocket`?
   |
LL | fn test_udpsoc(_x: std::net::UdpSocket){}
   |                    ^^^^^^^^^^^^^^^^^^^

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0412`.
